# EmergenceFramework

./: .gitignore  CMakeLists.txt
demo/: demo.cmake  main.cpp
framework/: Game.cpp  Game.hpp  GameHost.hpp  Platform.hpp  SharedLibrary.hpp  framework.cmake
framework/Libraries/: GLFW.hpp  Vulkan.hpp
framework/Log/: Color.hpp  Logger.cpp  Logger.hpp
framework/Renderer/: Vulkan.hpp
framework/Renderer/Vulkan/: QueueFamilies.cpp  QueueFamilies.hpp  Swapchain.cpp  Swapchain.hpp  SwapchainInfo.cpp  SwapchainInfo.hpp  Vulkan.cpp  Vulkan.hpp
framework/Thread/: GameThread.hpp  Thread.cpp  Thread.hpp
framework/Window/: GLFW.cpp  GLFW.hpp  Window.cpp  Window.hpp
